# pd-node

./: .gitignore  .gitmodules  CMakeLists.txt  FILE_LOCATIONS.md  LICENSE  NEXT_STEPS.md  PHASE2_COMPLETE.md  QUICKSTART.md  README.md  ROADMAP.md  TROUBLESHOOTING.md  install-plugdata.sh  install.sh
.openspec/proposals/: PROPOSAL.md  phase-2-ipc-bridge.md
.openspec/research/: max-msp-comparison.md  runtime-size-comparison.md
binaries/arm64-macos/: node-help.pd  wrapper.js
binaries/arm64-macos/pd-api/: index.d.ts  package.json
docs/: ARCHITECTURE.md  ARCHITECTURE_EXPLAINED.md  NEXT_STEPS.md  STATUS.md  TESTING.md
examples/: hello.js  hello.ts
node/: ipc_bridge.cpp  ipc_bridge.h  node.cpp  runtime_detector.cpp  runtime_detector.h
patches/: README.md  hello-demo.pd  teoria-demo.pd  test-patch.pd  weather-demo.pd
pd-api/: README.md  index.js
src/: CMakeLists.txt
